--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </script>
   </head>
 
-  <body>
+  <body wupdark>
     <noscript>
       <strong> We're sorry but this doesn't work properly without JavaScript enabled. Please enable it to continue. </strong>
     </noscript>
